test/regression/expected/basic.out
CREATE TABLE t(a INT);
INSERT INTO t SELECT g % 10 from generate_series(1,1000) g;
SELECT COUNT(*) FROM t;
 count 
-------
  1000
(1 row)

SELECT a, COUNT(*) FROM t WHERE a > 5 GROUP BY a ORDER BY a;
 a | count 
---+-------
 6 |   100
 7 |   100
 8 |   100
 9 |   100
(4 rows)

SET duckdb.max_threads_per_postgres_scan to 4;
SELECT COUNT(*) FROM t;
 count 
-------
  1000
(1 row)

SELECT a, COUNT(*) FROM t WHERE a > 5 GROUP BY a ORDER BY a;
 a | count 
---+-------
 6 |   100
 7 |   100
 8 |   100
 9 |   100
(4 rows)

CREATE TABLE empty(a INT);
SELECT COUNT(*) FROM empty;
 count 
-------
     0
(1 row)

SET duckdb.max_threads_per_postgres_scan TO default;
SET client_min_messages TO default;
DROP TABLE t;
DROP TABLE empty;
-- Check that DROP / CREATE extension works
DROP EXTENSION pg_duckdb;
CREATE EXTENSION pg_duckdb;
-- Verify that all pages that are fetched are closed before execution ends.
-- Table with smaller number of tuples (if nothing is matched) will terminate execution
-- before second table is read to the end.
CREATE TABLE rt(a INT);
CREATE TABLE lt(a INT);
INSERT INTO rt SELECT g FROM generate_series(1,100) g;
INSERT INTO lt SELECT g % 10 FROM generate_series(1,100000) g;
SELECT lt.a * rt.a FROM lt, rt WHERE lt.a % 2 = 0 AND rt.a = 0;
 ?column? 
----------
(0 rows)

DROP TABLE lt;
DROP TABLE rt;
---- Regression for gh#347
CREATE TABLE t(a INT, b VARCHAR);
INSERT INTO t SELECT g from generate_series(1,10) g;
INSERT INTO t SELECT g % 10 from generate_series(1,1000) g;
INSERT INTO t SELECT g % 100, MD5(g::VARCHAR) FROM generate_series(1,1000) g;
INSERT INTO t SELECT g % 100, MD5(g::VARCHAR) FROM generate_series(1,1000) g;
SELECT COUNT(b) FROM t WHERE a > 3;
 count 
-------
  1920
(1 row)

DROP TABLE t;
CREATE TABLE t (a INT) PARTITION BY LIST (a);
CREATE TABLE s (b INT);
SELECT * FROM t JOIN s ON a = b;
 a | b 
---+---
(0 rows)

DROP TABLE t;
DROP TABLE s;
CREATE TABLE a  (b int);
CREATE TABLE "A"(c int);
INSERT INTO a VALUES(1);
SET duckdb.force_execution = false;
SELECT * FROM a, "A" as aa;
 b | c 
---+---
(0 rows)

SET duckdb.force_execution = true;
SELECT * FROM a, "A" as aa;
WARNING:  (PGDuckDB/CreatePlan) Prepared query returned an error: 'Binder Error: Table "aa" does not have a column named "c"
LINE 1: SELECT a.b, aa.c FROM pgduckdb.public.a, pgduckdb.p...
                    ^
 b | c 
---+---
(0 rows)

DROP TABLE a;
DROP TABLE "A";
